2005-04-10  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>

	Get a file name for "Import Data" and actually read data.
	(No new strings).
	* kchart_view.cc (importData): Open a file dialog, and read data.
	
	----------------------------------------------------------------

	Start on import data from Comma Separated Values files (CSV)
	(Wish 99995)
	* csvimportdialog.{h,cc}: new files
	* csvimportdialogui.ui: new file
	* Makefile.am: Add files above
	* kchart.rc (File menu): Add Action import_data
	* kchart_view.cc (import_data): new KAction
	(importData): new slot
	

2005-04-07  Fredrik Edemar  <f_edemar@linux.se>

        * kchart_part.cc (KChartPart): Set modified when the chart type is
	changed.

2005-04-10  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>

	Fix the margins on the pie config page.
	* kchartParameterPieConfigPage.cc (KChartParameterPieConfigPage):
	Added a toplevel layout.

2005-04-07  Inge Wallin  <ingwa@dhcp-254-182.lkpg.cendio.se>

	* kchartWizardLabelsLegendPage.cc (KChartWizardLabelsLegendPage):
	Reenable titles for X and Y axis.

2005-04-07  Fredrik Edemar  <f_edemar@linux.se>

	* kchart_part.cc (KChartPart): The decimal symbol and thousends
	separator is the same as the rest of KDE.
	* kchart_params.cc (KChartParams): Revert my last change: use
	KDChart's default precision instead.
	* KDChart (KDChartAxesPainter.cpp): The axis label: Use at most 6
	digits after the decimal point.

	----------------------------------------------------------------

	Fix bug 103267: Unreasonable precison in axis values 
	* kchartParameterConfigPage.{h,cc} (KChartParameterConfigPage):
	Add settings for decimal precision for the left axis.
	* kchart_params.cc (KChartParams): Set 2 as default decimal
	precision.
	* KDChart: If the totalLen property is >0, the text label should
	be truncated at the position of totalLen.
	* KDChart: Fixed an error in the documentation:
	KDCHART_DATA_VALUE_AUTO_DIGITS-> AXIS_LABELS_AUTO_DIGITS.
